--- a/package.json
+++ b/package.json
@@ -4,15 +4,12 @@
   "description": "FremilyMainServer",
   "main": "server.js",
   "dependencies": {
+    "cookie-parser": "^1.3.4",
     "express": "^4.12.1",
     "mongoose": "^3.8.24",
-    "multer": "^0.1.8"
+    "morgan": "^1.5.2",
+    "multer": "^0.1.8",
+    "underscore": "^1.8.3"
   },
-  "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
-  },
-  "author": "",
-  "license": "ISC"
+  "author": "Roi Tal - The Creator"
 }
