--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "^4.12.1",
     "fs": "0.0.2",
     "http": "0.0.0",
+    "jwerty": "^0.3.2",
     "mongoose": "^3.9.7",
     "morgan": "^1.5.2",
     "multer": "^0.1.8",
